[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colorlogger"
version = "1.0.0"
authors = [
  { name="Guss" },
]
description = "Logger colorido, contextual e simples para Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {text = "MIT License"}
keywords = ["logger", "terminal", "color", "debug", "log"]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/GussApenas/colorlogger"
"Source" = "https://github.com/GussApenas/colorlogger"
"Issue Tracker" = "https://github.com/GussApenas/colorlogger/issues"
